--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-  "name": "darrynten/clarifai-php",
+  "name": "jbcruise/clarifai-php",
   "description": "PHP Client for the Clarifai API",
   "type": "library",
   "require": {
-    "php": "^7.0",
+    "php":  "^5.5.9 || ^7.0",
     "guzzlehttp/guzzle": "^6.2.1",
     "darrynten/any-cache": "^1.0"
   },
