--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
   "description": "PHP Client for the Clarifai API",
   "type": "library",
   "require": {
-    "php":  "^5.5.9 || ^7.0",
-    "darrynten/any-cache": "^1.0"
+    "php":  "^5.5.9 || ^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.0",
