--- a/composer.json
+++ b/composer.json
@@ -5,18 +5,9 @@
   "require": {
     "php":  "^5.5.9 || ^7.0"
   },
-  "require-dev": {
-    "phpunit/phpunit": "~5.0",
-    "mockery/mockery": "dev-master",
-    "internations/http-mock": "^0.8.1"
-  },
-  "config": {
-    "bin-dir": "bin"
-  },
   "autoload": {
     "psr-4": {
-      "DarrynTen\\Clarifai\\": "src/",
-      "DarrynTen\\Clarifai\\Tests\\": "tests/"
+      "DarrynTen\\Clarifai\\": "src/"
     },
     "exclude-from-classmap": ["/Tests/"]
   }
