--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,22 @@
   "description": "PHP Client for the Clarifai API",
   "type": "library",
   "require": {
-    "php":  "^5.5.9 || ^7.0"
+    "php":  "^5.5.9 || ^7.0",
+    "guzzlehttp/guzzle": "^6.2.1",
+    "darrynten/any-cache": "^1.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~5.0",
+    "mockery/mockery": "dev-master",
+    "internations/http-mock": "^0.8.1"
+  },
+  "config": {
+    "bin-dir": "bin"
   },
   "autoload": {
     "psr-4": {
-      "DarrynTen\\Clarifai\\": "src/"
+      "DarrynTen\\Clarifai\\": "src/",
+      "DarrynTen\\Clarifai\\Tests\\": "tests/"
     },
     "exclude-from-classmap": ["/Tests/"]
   }
